GNOME Bugzilla – Bug 640837
GStreamer-python fails to build
Last modified: 2011-01-28 17:01:47 UTC
/bin/sh ../libtool --silent --tag=CC --mode=compile gcc -std=gnu99 -DHAVE_CONFIG_H -I. -I.. -I/usr/include/python2.7 -I/usr/include/python2.7 -pthread -I/usr/include/pygtk-2.0 -I/usr/lib/libffi-3.0.9/include -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -pthread -I/usr/include/gstreamer-0.10 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/libxml2 -Werror -fno-strict-aliasing -O2 -g -pipe -Wall -Wp,-D_FORTIFY_SOURCE=2 -fexceptions -fstack-protector --param=ssp-buffer-size=4 -m32 -march=i686 -mtune=atom -fasynchronous-unwind-tables -c -o _gst_la-pygstexception.lo `test -f 'pygstexception.c' || echo './'`pygstexception.c GEN gst.c cc1: warnings being treated as errors gstmodule.c: In function 'pygst_fraction_to_value': gstmodule.c:129:1: error: label 'out' defined but not used
Hope this helps: commit fac013c0336a69debff2486fe2334761dc28fda3 Author: Tim-Philipp Müller <tim.muller@collabora.co.uk> Date: Fri Jan 28 16:59:11 2011 +0000 gstmodule: remove unused label to fix compiler warning gstmodule.c: In function 'pygst_fraction_to_value': gstmodule.c:129:1: error: label 'out' defined but not used https://bugzilla.gnome.org/show_bug.cgi?id=640837 If there are more warnings, please collect them all with: $ make clean $ make ERROR_CFLAGS='' 2>warn.log