gstmodule: remove unused label to fix compiler warning

gstmodule.c: In function 'pygst_fraction_to_value':
gstmodule.c:129:1: error: label 'out' defined but not used

https://bugzilla.gnome.org/show_bug.cgi?id=640837